@@ -25,3 +25,4 @@ Martin Schulz <schulz@videotron.ca>
 Joerg Mattes <joerg.mattes@nch.it>
 Andreas Goll <Andreas@goll.com>
 LaMont Jones <lamont@smallone.fc.hp.com>
+Harrie Hazewinkel <harrie@covalent.net>
