@@ -8,7 +8,7 @@
  * See the file "COPYING" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * @(#) $Id: smi.h.in,v 1.30 2001/01/04 10:10:17 strauss Exp $
+ * @(#) $Id: smi.h.in,v 1.31 2001/04/24 08:42:31 strauss Exp $
  */
 
 #ifndef _SMI_H
@@ -245,9 +245,9 @@ typedef struct SmiNode {
     char                *units;
     char                *description;
     char                *reference;
-    SmiIndexkind        indexkind;
-    int                 implied;
-    int                 create;
+    SmiIndexkind        indexkind;    /* only valid for rows */
+    int                 implied;      /* only valid for rows */
+    int                 create;       /* only valid for rows */
     SmiNodekind         nodekind;
 } SmiNode;
 
